--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel=StyleSheet href="styles/main.css" type="text/css" media=screen> 
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap" rel="stylesheet">
     <title>Maquetación</title>
 </head>
 
@@ -11,6 +12,7 @@
     
      
         <section class="Pachaqtec">
+            <h1 class="text">Pachaqtec</h1>
         <img class="img_sobre"src="imagenes/BANNER.png">
         </section>
 
